--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="removeNote">Remove note</string>
 
     <string name="titleHint">Enter title here</string>
+    <string name="title_activity_main2">Main2Activity</string>
 
 </resources>
